<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/toolbar_shuffle"
        android:title="@string/menu_shuffle"
        android:icon="@drawable/ic_action_shuffle"
        app:showAsAction="always"/>
    <item
        app:showAsAction="ifRoom"
        android:id="@+id/toolbar_notify"
        android:title="@string/menu_notify"
        android:icon="@drawable/ic_action_notify"/>
    <item
        android:title="@string/menu_search"
        android:icon="@drawable/ic_action_search"
        android:id="@+id/toolbar_search"/>
    <item
        app:showAsAction="never"
        android:id="@+id/toolbar_about"
        android:title="@string/menu_about"/>
    <item
        app:showAsAction="never"
        android:id="@+id/toolbar_out"
        android:title="@string/menu_register"/>
</menu>