<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="60dp"
              android:padding="15dp"
              android:gravity="center">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_centerHorizontal="true"
        android:id="@+id/Login_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher"
        android:clickable="true"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"/>
    <EditText
        android:hint="@string/login_username"
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:inputType="numberPassword"
        android:hint="@string/login_password"
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/keep_password"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="10dp"
        android:layout_gravity="end"
        android:text="@string/login_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="登陆"
        android:background="@drawable/btu_shape"
        android:id="@+id/log_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="注册"
        android:background="@drawable/btu_shape"
        android:id="@+id/regis_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/forget_password"
        android:textColor="@color/colorAccent"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:text="忘记密码？"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>